src/test/valid/extensionTests/classes/classMultipleAttributes.wacc
begin
  class Berry() is
    string colour;
    int size;

    Berry(string c, int s) is
      colour = c;
      size = s
    end

    string getColour() is
      return colour
    end

    int getSize() is
      return size
    end

    bool setColour(string c) is
      colour = c;
      return true
    end
  end

  berry = new Berry("blue", 2);
  raspberry = new Berry("red", 4);

  string col = raspberry.getColour();
  println col;

  int s = berry.getSize();
  println s
end
